--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 					<ul class="buttons">
 						
-						<a href=""><li class="button">Get in Contact</li></a>
+						<a href="#contact"><li class="button">Get in Contact</li></a>
 						<a href=""><li class="button">Another button</li></a>
 
 					</ul>
@@ -85,18 +85,34 @@
 						<section class="galleryHolder">
 							<ul class="gallery">
 								<li class="galleryElement">
-									<img src="img/pp.jpg" alt="">
-									<h3>Title of Project</h3>
+									<div class="imageContainer">
+										<img src="img/screenshots/screenshot1.png" alt="">	
+										<div class="overlay">
+											<span>Go to site</span>
+										</div>
+									</div>
+									
+									<h3>Project number 1</h3>
 									<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam sequi id iure fugiat modi harum. Reiciendis, consequuntur error unde facilis mollitia deserunt blanditiis ex illum officia dignissimos atque tempore accusantium.</p>
 								</li>
 								<li class="galleryElement">
-									<img src="img/pp.jpg" alt="">
-									<h3>Title of poject</h3>
+									<div class="imageContainer">
+										<img src="img/screenshots/screenshot1.png" alt="">	
+										<div class="overlay">
+											<span>Go to site</span>
+										</div>
+									</div>
+									<h3>Project number 2</h3>
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, deleniti sapiente officiis, quae consequatur similique fuga, obcaecati vero reprehenderit harum esse molestias? Cum omnis consectetur vel officiis iure quaerat sint ipsum magni impedit eum facilis reprehenderit ducimus, accusamus quae autem.</p>
 								</li>
 								<li class="galleryElement">
-									<img src="img/pp.jpg" alt="">
-									<h3>Title of Project</h3>
+									<div class="imageContainer">
+										<img src="img/screenshots/screenshot1.png" alt="">	
+										<div class="overlay">
+											<span>Go to site</span>
+										</div>
+									</div>
+									<h3>Project number 3</h3>
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos corrupti a error repellat provident dolor necessitatibus iste quidem commodi? Ducimus quas iusto libero dicta excepturi ipsum dolorum exercitationem doloribus.</p>
 								</li>
 							</ul>
@@ -107,9 +123,11 @@
 
 		</section>
 		
-		<section class="blockContainer contact">
+		<section class="blockContainer contact" id="contact">
 			<section class="block">
 				<h2>Get in contact with me</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, nihil a autem aspernatur odit, fugiat, fuga qui adipisci recusandae quis omnis ea cupiditate consequuntur? Dolores veritatis error neque ea harum!</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab minus, quam temporibus consectetur sint maxime id ratione amet repellat, autem voluptates esse facere quaerat expedita ut harum molestias, reprehenderit voluptatibus!</p>
 			</section>
 
 		</section>
